@@ -1,3 +1,5 @@
+HEAD
+	+ Workaround in members table agains lost of directory parameter/attribute
 3.4.1
 	+ Improved network object members management
 3.4
